my ispiration section commit

--- a/index.html
+++ b/index.html
@@ -23,6 +23,50 @@
             </div>
         </div>
     </header>
+    <main>
+        <!-- web development section start  -->
+        <div class="web-development-section">
+            <div>
+                <h1 class="title">Why Web Development??</h1>
+                <br><br>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                    <div class="web-development-box">
+                        <div class="web-development-content">
+                            <h2>I will Do Coding and Change The World</h2>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <button>Learn More</button>
+                        </div>
+                        <img src="assets/Layer_1.png" alt="">
+                    </div>
+                    <div class="web-development-box">
+                        <img src="assets/Group 3.png" alt="">
+                        <div class="web-development-content">
+                            <h2>I will help People by creating Modern Web System</h2>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <button>Learn More</button>
+                        </div>
+                    </div>
+                    <div class="web-development-box">
+                        <div class="web-development-content">
+                            <h2>I will Do Coding and Change The World</h2>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <button>Learn More</button>
+                        </div>
+                        <img src="assets/Layer_1.png" alt="">
+                    </div>
+            </div>
+        </div>
+
+        <!-- inspiration section start -->
+         <div class="my-inspiration-section">
+            <div class="my-inspiration-content-box">
+                <h1 class="title">My Inspiration</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+            </div>
+            <iframe width="1076" height="550" src="https://www.youtube.com/embed/S-gIFz-uYNw?si=A14Rd68_PI2JN8RM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        
+         </div>
+    </main>
     
 </body>
 </html>
