--- a/index.html
+++ b/index.html
@@ -66,6 +66,34 @@
             <iframe width="1076" height="550" src="https://www.youtube.com/embed/S-gIFz-uYNw?si=A14Rd68_PI2JN8RM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         
          </div>
+         <!-- current target section star -->
+
+         <div class="target-section">
+            <div class="target-descreption">
+                <h1 class="title">My Current Target</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+            </div>
+            <div class="target-box">
+                <div class="target one">
+                    <img src="assets/html.png" alt="">
+                    <h3>HTML</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                    <a href="">Learn More</a>
+                </div>
+                <div class="target two">
+                    <img src="assets/css.png" alt="">
+                    <h3>CSS</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                    <a href="">Learn More</a>
+                </div>
+                <div class="target three">
+                    <img src="assets/js.png" alt="">
+                    <h3>JavaScript</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                    <a href="">Learn More</a>
+                </div>
+            </div>
+         </div>
     </main>
     
 </body>
