my footer section done

--- a/index.html
+++ b/index.html
@@ -105,6 +105,17 @@
             <input type="submit" value="submit">
           </div>
     </main>
+
+    <footer>
+        <!-- footer -->
+         <div class="footer">
+            <h3>An Open Commitment by Awlad Hossain</h3>
+            <div class="footer-icon">
+                <img src="assets/facebook.png" alt="">
+                <img src="assets/github.png" alt="">
+                <img src="assets/linkedin-icon 1.png" alt=""></div>
+         </div>
+    </footer>
     
 </body>
 </html>
