banner button style done

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div>
                     <h1>"In the near future, I hope to become a Developer."</h1>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
-                    <a href="https://github.com/syed-muhimin-anam?tab=repositories"><button>Contact with me</button></a>
+                    <a href="#footer" target="_self"><button>Contact with me</button></a>
                 </div>
             </div>
         </div>
@@ -108,7 +108,7 @@
 
     <footer>
         <!-- footer -->
-         <div class="footer">
+         <div id="footer" class="footer">
             <h3>An Open Commitment by Awlad Hossain</h3>
             <div class="footer-icon">
                 <img src="assets/facebook.png" alt="">
