my targets hyperlink added

--- a/index.html
+++ b/index.html
@@ -78,19 +78,19 @@
                     <img src="assets/html.png" alt="">
                     <h3>HTML</h3>
                     <p>Lorem Ipsum is simply dummy text of the printing.</p>
-                    <a href="">Learn More</a>
+                    <a href="https://www.w3schools.com/html/" target="_blank">Learn More</a>
                 </div>
                 <div class="target two">
                     <img src="assets/css.png" alt="">
                     <h3>CSS</h3>
                     <p>Lorem Ipsum is simply dummy text of the printing.</p>
-                    <a href="">Learn More</a>
+                    <a href="https://www.w3schools.com/css/" target="_blank">Learn More</a>
                 </div>
                 <div class="target three">
                     <img src="assets/js.png" alt="">
                     <h3>JavaScript</h3>
                     <p>Lorem Ipsum is simply dummy text of the printing.</p>
-                    <a href="">Learn More</a>
+                    <a href="https://www.w3schools.com/js/" target="_blank">Learn More</a>
                 </div>
             </div>
          </div>
