footer icon hyperlink added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div>
                     <h1>"In the near future, I hope to become a Developer."</h1>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
-                    <a href="#footer" target="_self"><button>Contact with me</button></a>
+                    <a href="#footer"><button>Contact with me</button></a>
                 </div>
             </div>
         </div>
@@ -111,9 +111,9 @@
          <div id="footer" class="footer">
             <h3>An Open Commitment by Awlad Hossain</h3>
             <div class="footer-icon">
-                <img src="assets/facebook.png" alt="">
-                <img src="assets/github.png" alt="">
-                <img src="assets/linkedin-icon 1.png" alt=""></div>
+                <a href="https://www.facebook.com/syedmuhimin.anam/" target="_blank"><img src="assets/facebook.png" alt=""></a>
+                <a href="https://github.com/syed-muhimin-anam" target="_blank"><img src="assets/github.png" alt=""></a>
+                <a href="https://www.instagram.com/syedmuhiminanam/" target="_blank"><img src="assets/linkedin-icon 1.png" alt=""></div></a>
          </div>
     </footer>
     
