little changes in banner section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <img src="assets/Group.png" alt="">
                 <div>
                     <h1>"In the near future, I hope to become a Developer."</h1>
-                    <p>I want to become a developer. I like programming because its challenging and hard.SO that its grab my attention to solve problem.</p>
+                    <p>I want to become a developer. I like programming because its challenging and hard.SO that its grab my attention to stay with it.</p>
                     <a href="#footer"><button>Contact with me</button></a>
                 </div>
             </div>
