my next target section added

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             <iframe width="1076" height="550" src="https://www.youtube.com/embed/S-gIFz-uYNw?si=A14Rd68_PI2JN8RM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         
          </div>
-         <!-- current target section star -->
 
+         <!-- current target section star -->
          <div class="target-section">
             <div class="target-descreption">
                 <h1 class="title">My Current Target</h1>
@@ -91,6 +91,35 @@
                     <h3>JavaScript</h3>
                     <p> It is the heart of a website its make a site alive.</p>
                     <a href="https://www.w3schools.com/js/" target="_blank">Learn More</a>
+                </div>
+            </div>
+            <!-- next target section -->
+            <div class="next-target-section">
+                <h1 class="title">My Next Target</h1>
+                <p>My next target is learning JavaScript framework, Node js, React Js and MOngoDB. By learning these i will become a next level developer.</p>
+                <div class="next-target-box">
+                    <img src="assets/react.png" alt="">
+                    <div class="target-item">
+                        <h3>React Js</h3>
+                        <p>React lets you build user interfaces out of individual pieces called components. Create your own React components like Thumbnail, LikeButton, and Video.</p>
+                        <a href="https://react.dev/" target="_blank">Learn More</a>
+                    </div>
+                </div>
+                <div class="next-target-box">
+                    <img src="assets/nodejs.png" alt="">
+                    <div class="target-item">
+                        <h3>Node Js</h3>
+                        <p>Node.js is an open-source and cross-platform JavaScript runtime environment. It is a popular tool for almost any kind of project!</p>
+                        <a href="https://nodejs.org/en/learn/getting-started/introduction-to-nodejs" target="_blank">Learn More</a>
+                    </div>
+                </div>
+                <div class="next-target-box">
+                    <img src="assets/mongodb.png" alt="">
+                    <div class="target-item">
+                        <h3>MongoDB</h3>
+                        <p>Makes development easy
+                            MongoDB’s document model is simple for developers to learn and use, while still providing all the capabilities needed.</p>
+                        <a href="https://www.mongodb.com/company/what-is-mongodb" target="_blank">Learn More</a></div>
                 </div>
             </div>
          </div>
