first assignment complete

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
         </div>
     </header>
-    
+
 
     <main>
         <!-- web development section start  -->
@@ -68,7 +68,10 @@
                 <h1 class="title">My Inspiration</h1>
                 <p>My biggest inspiration is my hostel roommate, he is also a programmer. he started programming at the age of 14. first i learn programming from him. then Jhankar Mahbub bhai is my inspiration, he inspired me to beat my fear as a non CSE student cause i hear that is also a non CSE student and now is a renown developer of our country.</p>
             </div>
-            <iframe width="1076" height="550" src="https://www.youtube.com/embed/S-gIFz-uYNw?si=A14Rd68_PI2JN8RM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="youtube-video">
+                <iframe width="1076" height="550" src="https://www.youtube.com/embed/S-gIFz-uYNw?si=A14Rd68_PI2JN8RM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        
          </div>
 
          <!-- current target section start -->
