--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <h1 class="title">I need Support</h1>
                 <p>I need your support to achieve my goal. If you support me then it will be very easy for me.</p>
                 <input type="text" placeholder="Suggest me any feedback for me">
-                <input type="submit" value="submit">
+                <input type="submit" value="Submit">
           </div>
     </main>
 
